# hugin

./: .gitmodules  readme.md
fixtures/json/: index_settings.json  readme.md
source/: CMakeLists.txt  conf.h.cmake  config.cpp.cmake
source/cmake_modules/: FindCasablanca.cmake
source/hugin/: CMakeLists.txt  hugin.cpp  hugin.h  persistor.cpp  persistor.h  rubber.cpp  rubber.h  types.cpp  types.h  visitors.cpp  visitors.h
source/hugin/tests/: CMakeLists.txt  hugin_tests.cpp
source/tests/: CMakeLists.txt  fixtures.h  integration_tests.cpp
